# embedded_curve

./: Cargo.toml  LICENSE  README.md  bigger.xcf  border.xcf  clear.xcf  color.xcf  dir_change.xcf  drunk.xcf  fast.xcf  gdb.sh  slow.xcf  smaller.xcf  swap.xcf
src/: bigger.data  border.data  border.rs  buffs.rs  clear.data  color.data  curve.rs  dir_change.data  display.rs  draw.rs  drunk.data  fast.data  game.rs  geometry.rs  input.rs  main.rs  player.rs  playingfield.rs  slow.data  smaller.data  swap.data
